[main] add bug entity, get projects route, create bug route, modified user id foreign keys
