# src/api/bug/dtos/create-bug.dto.ts
@@ -1,0 +1,20 @@
+import { PriorityEnum } from '@prisma/client';
+import { IsEnum, IsOptional, IsString } from 'class-validator';
+
+export class CreateBugReqDto {
+  @IsString()
+  title: string;
+
+  @IsEnum(PriorityEnum)
+  priority: PriorityEnum;
+
+  @IsString()
+  details: string;
+
+  @IsString()
+  issueLink: string;
+
+  @IsString()
+  @IsOptional()
+  assignedTo?: string;
+}
