# src/api/project/dtos/project-id.dto.ts
@@ -1,0 +1,6 @@
+import { IsString } from 'class-validator';
+
+export class ProjectIdDto {
+  @IsString()
+  projectId: string;
+}
