# src/api/project/project.router.ts
@@ -10,6 +10,8 @@ import {
   RequestWithUser,
   UserInfo,
 } from '../../utils/interfaces/auth.interface';
+import { authMiddleware } from '../../utils/middlewares/auth.middleware';
+import { ProjectIdDto } from './dtos/project-id.dto';
 
 class ProjectRouter implements Routes {
   public router = Router();
@@ -21,10 +23,21 @@ class ProjectRouter implements Routes {
 
   private initializeRoutes = () => {
     this.router.post(
-      ROUTES.project.createProject,
+      ROUTES.project.projects,
       roleMiddleware(UserRole.MP),
       validationMiddleware(CreateProjectReqDto, 'body'),
       this.createProject,
+    );
+    this.router.get(
+      ROUTES.project.projects,
+      authMiddleware,
+      this.getAllProjects,
+    );
+    this.router.post(
+      ROUTES.project.enrollInProject,
+      roleMiddleware(UserRole.TST),
+      validationMiddleware(ProjectIdDto, 'params'),
+      this.enrollInProject,
     );
   };
 
@@ -37,6 +50,38 @@ class ProjectRouter implements Routes {
       const body = req.body;
       const user = req.user as UserInfo;
       const response = await this.projectController.createProject(user, body);
+      res.status(200).json(response);
+    } catch (error) {
+      next(error);
+    }
+  };
+
+  private getAllProjects = async (
+    req: RequestWithUser,
+    res: Response,
+    next: NextFunction,
+  ) => {
+    try {
+      const user = req.user as UserInfo;
+      const response = await this.projectController.getAllProjects(user);
+      res.status(200).json(response);
+    } catch (error) {
+      next(error);
+    }
+  };
+
+  private enrollInProject = async (
+    req: RequestWithUser,
+    res: Response,
+    next: NextFunction,
+  ) => {
+    try {
+      const user = req.user as UserInfo;
+      const { projectId } = req.params;
+      const response = await this.projectController.enrollInProject(
+        user,
+        projectId,
+      );
       res.status(200).json(response);
     } catch (error) {
       next(error);
