# src/api/user/user.controller.ts
@@ -1,14 +1,20 @@
-import { Controller, Get, Route, Security, Tags, Request, Query } from 'tsoa';
+import { Controller, Get, Route, Security, Tags, Path } from 'tsoa';
 import { UserRole } from '@prisma/client';
 import { ROUTES } from '../../utils/constants';
-import { getAllUsers } from './user.service';
+import { getAllUsers, getUsersByRole } from './user.service';
 
 @Route('api')
 @Tags('User')
 export class UserController extends Controller {
   @Get(ROUTES.user.getAllUsers)
   @Security('token')
-  getAllUsers(@Query() role: UserRole) {
-    return getAllUsers(role);
+  getAllUsers() {
+    return getAllUsers();
+  }
+
+  @Get(ROUTES.user.getUsersByRole)
+  @Security('token')
+  getUsersByRole(@Path() role: UserRole) {
+    return getUsersByRole(role);
   }
 }
