# src/swagger.json
@@ -45,6 +45,45 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"GetResult_any.any.any_": {
+				"properties": {},
+				"type": "object"
+			},
+			"PriorityEnum": {
+				"type": "string",
+				"enum": [
+					"LOW",
+					"MEDIUM",
+					"HIGH"
+				]
+			},
+			"CreateBugReqDto": {
+				"properties": {
+					"title": {
+						"type": "string"
+					},
+					"priority": {
+						"$ref": "#/components/schemas/PriorityEnum"
+					},
+					"details": {
+						"type": "string"
+					},
+					"issueLink": {
+						"type": "string"
+					},
+					"assignedTo": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"title",
+					"priority",
+					"details",
+					"issueLink"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"CreateProjectReqDto": {
 				"properties": {
 					"repositoryName": {
@@ -216,6 +255,146 @@
 				}
 			}
 		},
+		"/api/bugs/{projectId}": {
+			"get": {
+				"operationId": "GetProjectBugs",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"allOf": [
+											{
+												"$ref": "#/components/schemas/GetResult_any.any.any_"
+											},
+											{
+												"properties": {},
+												"type": "object"
+											}
+										]
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Bugs"
+				],
+				"security": [
+					{
+						"token": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "projectId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			},
+			"post": {
+				"operationId": "CreateBug",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"allOf": [
+										{
+											"$ref": "#/components/schemas/GetResult_any.any.any_"
+										},
+										{
+											"properties": {},
+											"type": "object"
+										}
+									]
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Bugs"
+				],
+				"security": [
+					{
+						"token": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "projectId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/CreateBugReqDto"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/bugs/assign/{bugId}": {
+			"patch": {
+				"operationId": "AssignBugToMe",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"allOf": [
+										{
+											"$ref": "#/components/schemas/GetResult_any.any.any_"
+										},
+										{
+											"properties": {},
+											"type": "object"
+										}
+									]
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Bugs"
+				],
+				"security": [
+					{
+						"token": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "bugId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
 		"/api/projects": {
 			"post": {
 				"operationId": "CreateProject",
@@ -258,6 +437,133 @@
 						}
 					}
 				}
+			},
+			"get": {
+				"operationId": "GetAllProjects",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"allOf": [
+											{
+												"properties": {
+													"testerTeam": {
+														"items": {
+															"allOf": [
+																{
+																	"$ref": "#/components/schemas/GetResult_any.any.any_"
+																},
+																{
+																	"properties": {},
+																	"type": "object"
+																}
+															]
+														},
+														"type": "array"
+													},
+													"bugs": {
+														"items": {
+															"allOf": [
+																{
+																	"$ref": "#/components/schemas/GetResult_any.any.any_"
+																},
+																{
+																	"properties": {},
+																	"type": "object"
+																}
+															]
+														},
+														"type": "array"
+													},
+													"owner": {
+														"allOf": [
+															{
+																"$ref": "#/components/schemas/GetResult_any.any.any_"
+															},
+															{
+																"properties": {},
+																"type": "object"
+															}
+														]
+													}
+												},
+												"required": [
+													"testerTeam",
+													"bugs",
+													"owner"
+												],
+												"type": "object"
+											},
+											{
+												"$ref": "#/components/schemas/GetResult_any.any.any_"
+											},
+											{
+												"properties": {},
+												"type": "object"
+											}
+										]
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Project"
+				],
+				"security": [
+					{
+						"token": []
+					}
+				],
+				"parameters": []
+			}
+		},
+		"/api/projects/enroll/{projectId}": {
+			"post": {
+				"operationId": "EnrollInProject",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"message"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Project"
+				],
+				"security": [
+					{
+						"token": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "projectId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		},
 		"/api/testing/health-check": {
@@ -299,6 +605,33 @@
 						"content": {
 							"application/json": {
 								"schema": {
+									"items": {},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"User"
+				],
+				"security": [
+					{
+						"token": []
+					}
+				],
+				"parameters": []
+			}
+		},
+		"/api/users/{role}": {
+			"get": {
+				"operationId": "GetUsersByRole",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
 									"items": {
 										"properties": {
 											"projects": {},
@@ -330,7 +663,7 @@
 				],
 				"parameters": [
 					{
-						"in": "query",
+						"in": "path",
 						"name": "role",
 						"required": true,
 						"schema": {
